# react-native-superpowered

./: .gitignore  README.md  index.js  package.json  tea.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: Audio.cpp  Audio.h  Recorder.cpp  Recorder.h  SuperpoweredEffects.cpp  SuperpoweredRecorder.cpp
android/src/main/java/com/x86kernel/rnsuperpowered/: Audio.java  RNSuperPoweredPackage.java  RNSuperpoweredModule.java  RNSuperpoweredPackage.java  Recorder.java  SuperpoweredRecorder.java
ios/: Audio.h  Audio.mm  RNReactNativeSuperpowered.h  RNReactNativeSuperpowered.m  RNReactNativeSuperpowered.podspec  RNSuperpowered.h  RNSuperpowered.m  RNSuperpowered.podspec  Recorder.h  Recorder.mm
ios/RNReactNativeSuperpowered.xcodeproj/: project.pbxproj
ios/RNReactNativeSuperpowered.xcworkspace/: contents.xcworkspacedata
ios/RNSuperpowered.xcodeproj/: project.pbxproj
ios/RNSuperpowered.xcodeproj/xcshareddata/xcschemes/: RNReactNativeSuperpowered.xcscheme
ios/RNSuperpowered.xcworkspace/: contents.xcworkspacedata
src/: Audio.js  Recorder.js
